3rd time commit

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -85,15 +85,35 @@ main{
     background: #FFF8F3;
     border-radius: 10px;
     padding: 130px 150px;
+    text-align: center;
 }
 
 .section-title{
-text-align: center;
 margin-bottom: 30px;
+font-weight: 700;
+font-size: 35px;
 }
 
 .section-description{
     color: #757575;
     font-size: 18px;
     margin-bottom: 30px;
+}
+
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+
+.info-title{
+    color: #757575;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.info-description{
+    text-align: center;
+    color: #474747;
+    font-weight: 700;
+    font-size: 20px;
 }
