--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,5 +1,6 @@
 *{
     margin: 0;
+    padding: 0;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -120,43 +121,147 @@ margin-bottom: 50px;
 }
 
 /* What i do styles */
+/* what i do */
 
-section{
-    margin-top: 130px;
+.what-do {
     text-align: center;
-}
-.skill{
-    text-align: left;
+    margin-top: 130px;
 }
 
-.skills-container{
+.skill-container {
     display: flex;
+    justify-content: space-between;
+    text-align: left;
     gap: 24px;
-    width: 267px;
-height: 377px;
 }
-.skill-description{
-    color: #757575;
-    font-size: 18px;
-    margin-bottom: 30px;
+
+.skills {
+    padding: 33px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.09);
+    border-radius: 5px;
+    cursor: pointer;
 }
-.skill-title{
+.skills:hover{
+    box-shadow: 0px 9px 52px rgba(0, 0, 0, 0.2);
+}
+
+.skill-title {
     font-weight: 700;
-    font-size: 20px;
+    font-size: 18px;
     color: #181818;
-    margin-top: 30px;
     margin-bottom: 20px;
 }
 
-.skill-description1{
-    color: #757575;
-    font-size: 18px;
+.skills img {
     margin-bottom: 30px;
 }
-.skill{
+
+.skill-descripiton {
+    font-size: 14px;
+}
+
+/* my resume */
+.my-resume {
+    margin-top: 130px;
+}
+
+.my-resume h1 {
+    font-weight: 700;
+    font-size: 35px;
+    color: #181818;
+    text-align: center;
+    margin-bottom: 110px;
+}
+
+.resume-main {
+    display: flex;
+    justify-content: space-between;
+    gap: 70px;
+}
+
+.resume-main h2 {
+    font-weight: 700;
+    font-size: 30px;
+    color: #474747;
+    margin-bottom: 30px;
+}
+
+.resume-main h3 {
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 34px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.resume-main h5{
+    font-weight: 600;
+font-size: 20px;
+color: #757575;
+}
+.resume-main p{
+    font-size: 16px;
+    color: #757575;
+    margin: 20px 0;
+}
+.resume-main hr{
+    margin-bottom: 20px;
+    color: #D1D1D1;
+}
+.my-resume .cv-btn{
+    text-align: center;
+    margin-top: 50px;
+}
+
+/* contact */
+
+.contact{
+    margin-top: 115px;
+    background: #FFF8F3;
     
-background: #FFFFFF;
-box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
-border-radius: 5px;
-padding: 30px;
+}
+.margin{
+    margin: 0 230px;
+    display: flex;
+    padding: 130px 0;
+    gap: 117px;
+}
+.contact h3{
+    font-weight: 700;
+font-size: 28px;
+color: #181818;
+}
+.link p{
+    color: #474747;
+    font-size: 16px;
+    margin: 30px 0;
+}
+.link ul{
+    display: flex;
+}
+.link ul li{
+    list-style: none;
+    margin-right: 20px;
+}
+.form-fil input,textarea{
+    width: 100%;
+    padding: 18px 30px;
+    margin-top: 25px;
+    border-radius: 7px;
+    border: 1px solid #FD6E0A;
+    outline: none;
+}
+.form-fil input[type="submit"]{
+    width: 40%;
+}
+
+footer p{
+    text-align: center;
+    margin: 10px 0;
+    font-size: 14px;
+}
+footer span{
+    color: red;
+    font-size: 17px;
+    font-weight: 700;
 }
