--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -10,7 +10,7 @@
 nav{
     display: flex;
     justify-content: space-between;
-    margin:  50px 200px;
+    padding:  50px 200px;
 }
 nav ul{
     display: flex;
